# Taller-Rust

./: README.md
TP/: .gitignore
TP/client/: Cargo.toml
TP/client/src/: main.rs  tests.rs
TP/client/src/managers/: connectionmanager.rs  idmanager.rs  mod.rs  subscriptionmanager.rs
TP/client/src/packagesresponses/: connackresponse.rs  mod.rs  subackresponse.rs  unsubackresponse.rs
TP/client/src/ui/src/: ui_v2.glade  ui_v2.glade~
TP/client/src/windows/: connectwindow.rs  mod.rs  publishwindow.rs  subscribewindow.rs
TP/http_server/: Cargo.toml  hello.html
TP/http_server/src/: main.rs
TP/http_server/src/managers/: measuresmanager.rs  mod.rs
TP/http_server/src/temperature/: conversion_utils.rs  mod.rs  temperature_entry.rs
TP/publisher/: Cargo.toml
TP/publisher/src/: main.rs
TP/server/: Cargo.toml  config.txt  credentials.txt
TP/server/src/: config.rs  main.rs  threadpool.rs
TP/server/src/managers/: credentialmanager.rs  messagemanager.rs  mod.rs  sessionmanager.rs  topicmanager.rs
TP/shared/src/: utils.rs
ahorcado/: Cargo.toml  compile.sh  main.rs
