[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_warn"] }
tracing-subscriber = "0.2"
tracing-appender = "0.1"
shared = { path = "../shared/" }